# datalog

./: .env  Cargo.toml  README.md
benches/: query.rs
migrations/: 20250213-triples.sql
src/: lib.rs  mem_store.rs  movies.rs  parsers.rs  persist.rs  pg_store.rs  pull.rs  query.rs  schema.rs  store.rs  transact.rs
