[package]
name = "datalog"
version = "0.1.0"
edition = "2021"

[features]
bench = []

[dependencies]
lazy_static = "1.5.0"
ordered-float = {version = "4.3.0", features = [ "serde" ] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.129"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[[bench]]
name = "query"
harness = false
required-features = ["bench"]
