[package]
name = "datalog"
version = "0.1.0"
edition = "2021"

[features]
bench = []

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
differential-dataflow = "0.13.5"
lazy_static = "1.5.0"
nom = "7.1.3"
ordered-float = {version = "4.3.0", features = [ "serde" ] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.129"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[[bench]]
name = "query"
harness = false
required-features = ["bench"]

[[bin]]
name = "server"
path = "bin/server.rs"
